--- a/ehr/public/index.html
+++ b/ehr/public/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/ehr/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
     <title>Mock EHR</title>
   </head>
   <body>
     <div id="root"></div>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Enable JavaScript to run this app.</noscript>
     <script type="module" src="/ehr/dist/index.js"></script>
   </body>
 </html>
